fixed issue with inconsistent dark mode toggle

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,9 +16,14 @@
   }
 }
 
-body {
+/* body {
   color: rgb(var(--foreground-rgb));
   background: rgb(
     var(--background-start-rgb)
-  ); /* Use a single color instead of gradient */
+  ); 
+} */
+
+body {
+  background-color: #ffff;
+  @apply bg-white dark:bg-slate-800;
 }
